--- a/src/app/imagedb/search-images/search-images.component.html
+++ b/src/app/imagedb/search-images/search-images.component.html
@@ -1,3 +1,4 @@
+<span class="float-right"><a [routerLink]="['/', imagedb_path, 'observation']">Search observations</a></span>
 <h2>Search images</h2>
 <form #searchForm="ngForm" (submit)="search(searchForm)">
     <div class="row">
