--- a/src/app/imagedb/list-images/list-images.component.html
+++ b/src/app/imagedb/list-images/list-images.component.html
@@ -54,7 +54,7 @@
         <td>{{img.filter}}</td>
         <td>{{img.exp_time}}s</td>
         <td>
-            <a [href]="'/download/' + img.scheme + ':' + img.filename">
+            <a [href]="env.basePath + '/download/' + img.scheme + ':' + img.filename">
                 <fa-icon [icon]="faDownload"></fa-icon>
                 download
             </a>
