renamed pytel to pyobs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div [class]="container_class">
-    <pytel-navigation *ngIf="show_navbar"></pytel-navigation>
+    <pyobs-navigation *ngIf="show_navbar"></pyobs-navigation>
     <router-outlet></router-outlet>
 </div>
