--- a/src/app/imagedb/search-images/search-images.component.html
+++ b/src/app/imagedb/search-images/search-images.component.html
@@ -199,5 +199,5 @@
 
 </form>
 
-<pytel-list-images [module]="module" [imagedb_path]="imagedb_path" [query]="query" *ngIf="query!==null">
-</pytel-list-images>
+<pyobs-list-images [module]="module" [imagedb_path]="imagedb_path" [query]="query" *ngIf="query!==null">
+</pyobs-list-images>
