--- a/src/app/taskdb/task-observations/task-observations.component.html
+++ b/src/app/taskdb/task-observations/task-observations.component.html
@@ -1,4 +1,4 @@
 <h2>Finished observations for task {{task}}</h2>
 
-<pytel-list-observations [module]="imagedb_module" [imagedb_path]="imagedb_path" [query]="query" *ngIf="query!==null">
-</pytel-list-observations>
+<pyobs-list-observations [module]="imagedb_module" [imagedb_path]="imagedb_path" [query]="query" *ngIf="query!==null">
+</pyobs-list-observations>
