--- a/src/app/imagedb/night-details/night-details.component.html
+++ b/src/app/imagedb/night-details/night-details.component.html
@@ -1,2 +1,2 @@
-<pytel-list-observations [module]="'imagedb'" [query]="{night_start: '2018-03-25', night_end: '2018-03-25'}">
-</pytel-list-observations>
+<pyobs-list-observations [module]="'imagedb'" [query]="{night_start: '2018-03-25', night_end: '2018-03-25'}">
+</pyobs-list-observations>
