--- a/src/app/imagedb/observation-details/observation-details.component.html
+++ b/src/app/imagedb/observation-details/observation-details.component.html
@@ -40,9 +40,9 @@
             <h4>Raw files</h4>
         </div>
         <div class="card-body">
-            <pytel-list-images [module]="module" [imagedb_path]="imagedb_path"
+            <pyobs-list-images [module]="module" [imagedb_path]="imagedb_path"
                                [query]="{observation: observation, reduction_status: 0}" [itemsPerPage]="10">
-            </pytel-list-images>
+            </pyobs-list-images>
         </div>
     </div>
 
@@ -55,9 +55,9 @@
             <h4>Reduced files</h4>
         </div>
         <div class="card-body">
-            <pytel-list-images [module]="module" [imagedb_path]="imagedb_path"
+            <pyobs-list-images [module]="module" [imagedb_path]="imagedb_path"
                                [query]="{observation: observation, reduction_status: 1}" [itemsPerPage]="10">
-            </pytel-list-images>
+            </pyobs-list-images>
         </div>
     </div>
 </div>
