--- a/src/app/imagedb/search-observations/search-observations.component.html
+++ b/src/app/imagedb/search-observations/search-observations.component.html
@@ -94,5 +94,5 @@
     </div>
 </form>
 
-<pytel-list-observations [module]="module" [imagedb_path]="imagedb_path" [query]="query" *ngIf="query!==null">
-</pytel-list-observations>
+<pyobs-list-observations [module]="module" [imagedb_path]="imagedb_path" [query]="query" *ngIf="query!==null">
+</pyobs-list-observations>
